# goit-python-core-hw7

./: README.md
hw7/clean_folder/: setup.py
hw7/clean_folder/clean_folder/: clean.py  test.py
hw7/clean_folder/clean_folder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hw7/clean_folder_main/: pyproject.toml
hw7/clean_folder_main/src/clean_package_vokur13/: clean.py
hw7/clean_folder_main/src/clean_package_vokur13.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
hw7/test/: test.py
